feat(#15): implement event push endpoint
